Account types not showing fix

--- a/app/wp-content/themes/prfwp/resources/assets/styles/acf/components/_planets-account-types.scss
+++ b/app/wp-content/themes/prfwp/resources/assets/styles/acf/components/_planets-account-types.scss
@@ -45,7 +45,6 @@ $shadows-big: multiple-box-shadow(100);
 }
 
 .stars {
-    z-index: 5;
     position: fixed;
     left: 12%;
     width: 1px;
@@ -66,7 +65,6 @@ $shadows-big: multiple-box-shadow(100);
 }
 
 .stars2 {
-    z-index: 5;
     position: fixed;
     width: 2px;
     height: 2px;
@@ -86,7 +84,6 @@ $shadows-big: multiple-box-shadow(100);
 }
 
 .stars3 {
-    z-index: 5;
     position: fixed;
     left: 25%;
     width: 3px;
